fix filetag display if null and table overflowing

--- a/Frontend/src/app/components/employee-profile/employee-profile.component.css
+++ b/Frontend/src/app/components/employee-profile/employee-profile.component.css
@@ -1,5 +1,5 @@
 *{
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .container {
@@ -15,6 +15,7 @@
     grid-auto-rows: 10% 44% 44% 2%;
     column-gap: 20px;
     row-gap: 5px;
+    overflow: hidden;
 }
 
 .header {
@@ -47,6 +48,7 @@
     grid-template-columns: 2fr 3fr;
     grid-template-rows: repeat(10, 1fr);
     border: none;
+    align-items: center;
 }
 
 .form {
@@ -157,6 +159,7 @@
     box-shadow: 0px 0px 5px 1px #888;
     outline: 1px solid black;
     border-radius: 5px;
+    overflow: hidden;
 }
 
 .file-table {
@@ -166,6 +169,8 @@
     height: 90%;
     margin: 1px auto 0px auto;
     position: relative;
+    overflow: auto;
+
 }
 
 .upload-file{
@@ -200,6 +205,7 @@
     font-size: 1.5rem;
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
+    overflow: auto;
 }
 
 .TableBox td {
